Stop content from overlapping with the tray

--- a/app/assets/stylesheets/fassets_core/master.css.scss
+++ b/app/assets/stylesheets/fassets_core/master.css.scss
@@ -155,6 +155,7 @@ ul#catalogs li {
 
 #container {
 	padding: 15px;
+  margin-bottom: 10px;
 	background-color: white;
 }
 
